# rdm7-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  firmware-sources.lock.json  index.html  lv_conf.h  lv_drv_conf.h  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vite.site.config.ts
.github/workflows/: ci.yml
can/: can_decode.c  can_decode.h  can_manager.h
docs/: TOUR_FORMAT.md
firmware_src_images/: ui_img_Indicator_L_active.c  ui_img_Indicator_L_not_active.c  ui_img_Indicator_R_active.c  ui_img_RDM_Dark_2.c  ui_img_RDM_Light.c  ui_img_indicator_left_png.c  ui_img_indicator_right_png.c
firmware_src_ui/: ui.h
firmware_src_ui/settings/: device_settings.h  preset_picker.h
fonts/: ui_font_Manrope_35_BOLD.c  ui_font_Manrope_54_BOLD.c  ui_font_fugaz_14.c  ui_font_fugaz_17.c  ui_font_fugaz_28.c  ui_font_fugaz_56.c
layout/: default_layout.h  layout_manager.c  layout_manager.h
public/: rdm7-sandbox.js  rdm7-sandbox.wasm
scripts/: build.ps1  setup-submodules.ps1  sync-firmware.ps1
src/: dash-sandbox.ts  highlight-overlay.ts  pointer-injector.ts  sandbox.ts  tour-types.ts  tutorial-runner.ts  voiceover.ts  wasm-loader.ts
src/c/: default_layout_mock.c  device_settings_sandbox.c  extra_screens_sandbox.c  hal_init.c  main_sandbox.c  menu_sandbox.c  pointer_injector.c  widget_config_sandbox.c  wizard_sandbox.c
stubs/: can_bus_test_mock.c  config_store_mock.c  ecu_presets_mock.c  esp_idf_shim.c  esp_idf_shim.h  font_stubs.c  theme_defs.c  ui_stubs.c  wifi_mock.c
stubs/shims/: device_settings.h  esp_stubs.h  lvgl_helpers.h  screen_config.h  ui.h
stubs/shims/driver/: ledc.h  twai.h
tours/: custom-can-signals.json  dashboard-reading.json  data-logging.json  display-settings.json  first-boot.json  manifest.json  menu-and-settings.json  peak-hold.json  quick.json  widget-config.json  wifi-setup.json
ui/: dashboard.h  theme.h
ui/callbacks/: ui_callbacks.h
ui/images/: ui_img_Indicator_R_not_active.c  ui_img_RDM_Dark.c  ui_img_rdm_logo_dash_png.c  ui_img_rpm_indicator_png.c
ui/menu/: menu_screen.h
ui/screens/: ui_Screen3.h
widgets/: font_manager.c  font_manager.h  screen_config.h  signal.c  signal.h  signal_internal.c  signal_internal.h  signal_sim.h  widget_arc.c  widget_arc.h  widget_bar.c  widget_bar.h  widget_button.c  widget_button.h  widget_image.c  widget_image.h  widget_indicator.c  widget_indicator.h  widget_meter.c  widget_meter.h  widget_panel.c  widget_panel.h  widget_registry.c  widget_registry.h  widget_rpm_bar.c  widget_rpm_bar.h  widget_rules.c  widget_rules.h  widget_shape_panel.c  widget_shape_panel.h  widget_shift_light.c  widget_shift_light.h  widget_text.c  widget_text.h  widget_toggle.c  widget_toggle.h  widget_types.c  widget_types.h  widget_warning.c  widget_warning.h
